completed day 3, part 2, from 2023
got a bit more help on how to implement the hashmap. the key was also incorporating a hashset.

--- a/2023_from_2024-11/notes/d3.md
+++ b/2023_from_2024-11/notes/d3.md
@@ -9,6 +9,11 @@ A big thanks to `https://dev.to/nickymeuleman/advent-of-code-2023-day-3-5di4` fo
     - [Beginning of the nested for loops](#beginning-of-the-nested-for-loops)
     - [Flagging adjacent symbols](#flagging-adjacent-symbols)
     - [Creating the sum](#creating-the-sum)
+- [Part 2](#part-2)
+    - [Using a hashset and hashmap](#using-a-hashset-and-hashmap)
+    - [Adding star positions to hashset](#adding-star-positions-to-hashset)
+    - [Adding numbers to hashmap](#adding-numbers-to-hashmap)
+    - [Getting the gear ratios](#getting-the-gear-ratios)
 
 ## Part 1
 
@@ -119,3 +124,79 @@ Then, math happens:
 - If the flag is set, `curr_num` is added to the running sum
 
 This is performed on all lines, until the end of the file. Then, the sum is returned.
+
+## Part 2
+
+Explanation of the code that solves part 2:
+
+### Using a hashset and hashmap
+
+```
+let mut adj_star_positions: HashSet<(i32, i32)> = HashSet::new();
+let mut stars: HashMap<(i32, i32), Vec<u32>> = HashMap::new();
+```
+
+In order to keep track of the positions of the stars (`*`), use a hashset.
+
+In order to keep track of the coordinates of stars, relative to the numbers, use a hashmap.
+
+### Adding star positions to hashset
+
+```
+for row_offset in -1..=1 {
+    for col_offset in -1..=1 {
+        if row_offset == 0 && col_offset == 0 {
+            continue
+        }
+
+        let adj_row = row as i32 + row_offset;
+        let adj_col = col as i32 + col_offset;
+
+        if adj_row < 0
+            || adj_row >= grid.len() as i32
+                || adj_col < 0
+                || adj_col >=grid[adj_row as usize].len() as i32
+        {
+            continue
+        }
+
+        if grid[adj_row as usize][adj_col as usize] == '*' {
+            adj_star_positions.insert((adj_row, adj_col));
+        }
+    }
+}
+```
+
+This time, if a number is next to a star, the coordinates of the star are added to the hashset.
+
+### Adding numbers to hashmap
+
+```
+curr_num *= 10;
+curr_num += value.to_digit(10).unwrap();
+
+if col + 1 >= grid[row].len() || !grid[row][col + 1].is_ascii_digit() {
+    for star in &adj_star_positions {
+        stars.entry(*star).or_default().push(curr_num);
+    }
+
+    curr_num = 0;
+    adj_star_positions.clear();
+}
+```
+
+The math is very similar to the math in part 1.
+
+However, this time, when the code reaches the end of either a line or a number, it will instead add the star coordinates and `curr_num` to the hashmap. Whether there was a star or not, both `curr_num` and the adjacent star coordinates are dropped.
+
+### Getting the gear ratios
+
+```
+stars
+    .values()
+    .filter(|numbers| numbers.len() == 2)
+    .map(|numbers| numbers[0] * numbers[1])
+    .sum()
+```
+
+Once the file ends, the hashmap is then reviewed. Coordinates for the stars are filtered based on how many numbers are keyed to them. If there are two numbers for the same coordinate, the numbers are multipled together to get the "gear ratios". Those "gear ratios" are then summed to get the final total, which is returned by the function.
